Fix spacing required for header

--- a/src/App.scss
+++ b/src/App.scss
@@ -83,6 +83,7 @@ button {
 
 body {
   line-height: 1;
+  margin-top: 3 * $spacing;
 }
 
 article,
