--- a/src/components/pages/homePage/HomePage.module.scss
+++ b/src/components/pages/homePage/HomePage.module.scss
@@ -2,7 +2,6 @@
 
 .cont {
   width: 100%;
-  padding-top: 3 * $spacing;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left center;
@@ -20,11 +19,10 @@
 
 .text {
   margin-top: $spacing;
-  margin-bottom: $spacing;
+  padding-bottom: $spacing;
 
   @media (min-width: map-get($map: $breakpoints, $key: "lg")) {
-    margin-top: 40px;
-    padding-top: 60px;
+    padding-top: 100px;
     height: 400px;
   }
 }
